<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/trends" />
        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_contibutors_event_black_24dp"
            android:title="@string/organization" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Communication">
        <menu>
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/exit" />
</menu>