<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mvp.ui.activities.UserDetailsActivity"
    tools:showIn="@layout/activity_user_details">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/owner_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_owner_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/star"
                    app:value_text="10" />

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_owner_followers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/followers"
                    app:value_text="10" />

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_owner_following"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/followings"
                    app:value_text="10" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_base_info"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/image_labels_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
