<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mvp.ui.activities.UserProfileActivity"
    tools:showIn="@layout/activity_user_details">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/user_base_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_user_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/star"
                    app:value_text="0" />

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_user_followers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/followers"
                    app:value_text="0" />

                <com.stormphoenix.ogit.widget.KeyValueLabel
                    android:id="@+id/label_user_following"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:key_text="@string/followings"
                    app:value_text="0" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_base_info"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/img_person"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_person_black_24dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="72dp">

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="36dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp"
                            tools:text="hzau.cs.wangcheng@gmail" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="36dp"
                            android:text="@string/email"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="72dp">

                        <TextView
                            android:id="@+id/text_location"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="36dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp"
                            tools:text="China" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="36dp"
                            android:text="@string/location"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="72dp">

                        <TextView
                            android:id="@+id/text_join"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="36dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp"
                            tools:text="2015年2月19日 11:11:18" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="36dp"
                            android:text="@string/join"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
